Removed the static style applied to the div with 'container-fluid' class as it limited the page content max width. Applied responsive conditions to screen widths below 1220 & 940 px for the forcast card data, adjusting the h3 & p tags to small and then x-small to avoid bunching and overlap. Correct position of footer in html struc + added content and css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,13 @@ header {
 
 header h1 {
     grid-column: 1/3;
+    padding-left: 5px;
 }
 
 .container-fluid {
     grid-column: 1/3;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 240px 4fr;
 }
 
 #left-side {
@@ -138,7 +139,46 @@ header h1 {
     grid-template-rows: 25px 25px 25px 25px auto;
 }
 
+.forcast-weather-card  h3 {
+    padding: 5px 5px;
+}
+
+.forcast-weather-card  p {
+    padding: 5px 5px;
+}
+
 #forecast-img {
     justify-self: center;
     align-self: center;
+}
+
+footer {
+    grid-column: 1/3;
+    display: flex;
+    background: #555;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 5px;
+}
+
+/* Change forecast card text size to prevent bunching  */
+@media only screen and (max-width: 1220px) {
+    .forcast-weather-card h3 {
+        font-size: small;
+    }
+
+    .forcast-weather-card p {
+        font-size: small;
+    }
+}
+
+@media only screen and (max-width: 940px) {
+    .forcast-weather-card h3 {
+        font-size: x-small;
+    }
+
+    .forcast-weather-card p {
+        font-size: x-small;
+    }
 }
